--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.8'
 
 # https://doc.traefik.io/traefik/user-guides/docker-compose/basic-example/
 services:
@@ -13,7 +13,7 @@ services:
       - --entrypoints.web.address=:80
     ports:
       - "80:80"
-      - "8080:8080"
+      - "8080:8080" # Traefik Dashboard http://localhost:8080/
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
